Archive2/01/0b018a30b71726/output
main.cpp:14:3: error: call to implicitly-deleted default constructor of 'U'
U u;
  ^
main.cpp:11:7: note: default constructor of 'U' is implicitly deleted because field 'a' has no default constructor
    A a;
      ^
1 error generated.
